# python-project-51

./: Makefile  README.md  pyproject.toml  ru-hexlet-io-courses.html  setup.cfg
.github/workflows/: CI_CHECK.yml  main.yml  my_ci2.yml
page_loader/: __init__.py  cli.py  html_processing.py  loader.py  logger.py  page_loader.py  progress.py  rename.py  resources.py
page_loader/load_processor/: data_loader.py  downloader.py  file_system_guide.py  html_parser.py  name_converter.py  saver.py
page_loader/scripts/: __init__.py  page_loader.py  run.py
tests/: auxiliary.py  test_cli.py  test_download.py  test_downloader.py  test_file_system_guide.py  test_html_parser.py  test_page_loader.py  test_url.py
tests/fixtures/: ru-hexlet-io-courses.html
