[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["M1RRoN <mds.myst@gmail.com>"]
readme = "README.md"
packages = [
    {include = "page_loader"}
]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
