[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["M1RRoN <mds.myst@gmail.com>"]
readme = "README.md"
packages = [
    {include = "page_loader"}
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = "^7.0.1"
pytest-cov = "^3.0.0"
requests-mock = "^1.10.0"
beautifulsoup4 = "4.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
page-loader = "page_loader.scripts.page_loader:main"